# acoj

./: CMakeLists.txt  bak.cpp  main.cpp  output_sample.txt  template.cpp  test.out  编程知识.md
ZJ-01/acoj/: 10001. 陶陶摘苹果.cpp  10003. 不高兴的津津.cpp  10004. 明明的随机数.cpp  10009. 数字反转.cpp  10011. 质因数.cpp  12002. 校门外的树.cpp  12105. 扫雷游戏.cpp  12106. 金币.cpp  12121. 买铅笔.cpp  12393. 标题统计.cpp  12492. 级数求和.cpp  12715. 输出矩阵.cpp  12716. 有规律的图案.cpp  12796. 最后一个字符.cpp  12807. 数字的出现次数.cpp  12853. 大小写转换.cpp
ZJ-01/acoj/入门/: 10009. 数字反转.cpp  10011. 质因数-不溢出写法.cpp  10012. 数字统计.cpp  10018. 津津的储蓄计划.cpp  12048. 1.1-1你的飞碟在这里.cpp  12306. 成绩.cpp  12537. 质因数分解.cpp  12824. 最高的分数2.cpp  12854. 二进制中1的个数.cpp  12856. 从小到大排序.cpp  12857. n个数的乘积.cpp  12892. 子数整数.cpp  12908. 背单词.cpp  12908. 背单词解法2.cpp  12923. 猜猜ABC.cpp  12928. 各位数的最值 .cpp  13001. 月球上的体重.cpp  13001. 月球上的体重解法2.cpp  13002. 绝对值的和 .cpp  13014. 约瑟夫问题.cpp  13015 数的分离.cpp
ZJ-01/acoj/普及-/: 10007. ISBN号码解法2.cpp  10013. 接水问题 .cpp  10014. 多项式输出.cpp  10015. FBI树.cpp  10015. FBI树递归解法.cpp  10016. 乒乓球.cpp  10017. 谁拿了最多奖学金.cpp  10021. 笨小猴.cpp  10161. 签到积分.cpp  11005. 记数问题.cpp  12001. 小哼买书.cpp  12004. 统计数字.cpp  12004.统计数字M1.cpp  12005. 奖学金.cpp  12006. 分数线划定-冒泡排序.cpp  12006. 分数线划定.cpp  12007. 纪念品分组-简化写法.cpp  12007. 纪念品分组.cpp  12009. 1.2-1挤牛奶.cpp  12010. 解密QQ号-堆栈解法.cpp  12010. 解密QQ号.cpp  12011. 机器翻译-linkedList解法.cpp  12011. 机器翻译-循环队列解法.cpp  12011. 机器翻译-普通队列解法.cpp  12011. 机器翻译-链表实现.cpp  12015. 表达式求值.cpp  12017. 队列的操作-循环队列解法.cpp  12017. 队列的操作-链表实现.cpp  12017. 队列的操作.cpp  12024. 修理牛棚-使用algorithm类.cpp  12024. 修理牛棚-最简写法.cpp  12024. 修理牛棚.cpp  12026. 火柴棒等式-暴力枚举.cpp  12039. 选数.cpp  12062. 采药-一维dp.cpp  12062. 采药-二维dp.cpp  12071. 积木大赛-找规律.cpp  12071. 积木大赛-错误.cpp  12085. 生活大爆炸版石头剪刀布.cpp  12091. 珠心算测验.cpp  (+64 more)
ZJ-01/acoj/普及和提高-/: 10019. 合并果子-优先队列.cpp  10019. 合并果子-堆排序.cpp  10022. 潜伏者.cpp  10025. HackSon的趣味题-50分超时.cpp  10025. HackSon的趣味题-分解质因数解法.cpp  10162. 股票价格.cpp  11016. 字符串的展开.cpp  11313. 牛奶工厂.cpp  12003. 混合牛奶.cpp  12008. 排座椅 .cpp  12013. 回文串.cpp  12013.回文串-栈解法.cpp  12014. 括号匹配 .cpp  12014. 括号匹配-栈解法.cpp  12016. 回文平方数.cpp  12018. 栈的操作.cpp  12025. 1.1-4坏掉的项链.cpp  12030. 牛式.cpp  12031. 全排列-回溯算法.cpp  12032. 解救小哈.cpp  12033. 炸弹人.cpp  12034. 再解炸弹人.cpp  12035. 宝岛探险.cpp  12036. 细胞.cpp  12037. 找到最大岛.cpp  12038. 最少转机.cpp  12041. 繁忙的都市.cpp  12049. 写作文.cpp  12060. 成绩单.cpp  12061. 数字配对.cpp  12070. 转圈游戏.cpp  12072. 花匠.cpp  12073. vigenere密码 .cpp  12076. 林克的逃亡.cpp  12077. 奶牛跨栏-Floyd算法.cpp  12080. 生命游戏.cpp  12082. 购物.cpp  12084. 邮递员送信-Bellman-Ford算法.cpp  12084. 邮递员送信-Dijkstra算法.cpp  12084. 邮递员送信-Floyd算法40分.cpp  (+53 more)
ZJ-01/remember_code/: code.md  countingSort.cpp  经验.cpp
ZJ-01/没做出来的/: 12264. 投影.cpp
ZJ-01/练习题/: P3912素数个数-原始.cpp  P3912素数个数-欧氏筛.cpp  洛谷P1605迷宫.cpp  洛谷P3912素数个数-埃氏筛.cpp  蛇形填数.cpp
luogu/题单/能力全面提升综合题单/: template.cpp  题单链接.md
luogu/题单/能力全面提升综合题单/Part 2 基础算法/: 基础算法.md
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.2 排序算法/P1177快速排序/: P1177快速排序-三路快排.cpp  P1177快速排序-两路快排-标准写法.cpp  P1177快速排序-两路快排.cpp  P1177快速排序.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.2 排序算法/P1908逆序对/: P1908逆序对-25分-超时.cpp  P1908逆序对.cpp  逆序对思路.md
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.3 二分答案/P1024一元三次方程求解/: P1024一元三次方程.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.3 二分答案/P1083借教室/: P1083借教室.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.3 二分答案/P1314聪明的质检员/: P1314聪明的质检员.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.3 二分答案/P1902刺杀大使/: P1902刺杀大使-最小生成树解法.cpp  P1902刺杀大使.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.3 二分答案/P2678跳石头/: P2678跳石头.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.3 二分答案/P4343自动刷题机/: P4343自动刷题机.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.4 分治/P1010幂次方/: P1010幂次方.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.4 分治/P1226快速幂取余运算/: P1226快速幂取余运算.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.4 分治/P1429平面最近点对/: P1429平面最近点对.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.4 分治/P3612奶牛密码/: P3612奶牛密码.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P1080国王游戏/: P1080国王游戏TODO.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P1094纪念品分组/: P1094纪念品分组.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P1199三国游戏/: P1199三国游戏.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P1208混合牛奶/: P1208混合牛奶.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P2123皇后游戏/: P2123皇后游戏.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P2672推销员/: P2672推销员.cpp  P2672推销员bak.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.5 贪心/P4995跳跳/: P4995跳跳.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.7 高精度/P1303高精度乘法/: P1303_5.in  P1303_5.out  P1303高精度乘法.cpp  my5.out
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.7 高精度/P1480高精度除法/: P1480_5.in  P1480_5.out  P1480高精度除法.cpp  my.out
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.7 高精度/P1601高精度加法/: P1601高精度加法.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.7 高精度/P1932高精度全套/: P1932高精度全套-模板.cpp  P1932高精度全套.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.7 高精度/P2142高精度减法/: P2142高精度减法.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.8 前缀和差分数组/P1387最大正方形/: P1387最大正方形.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.8 前缀和差分数组/P2280激光炸弹/: P2280激光炸弹.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.8 前缀和差分数组/P3131求区间和/: P3131求区间和.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.8 前缀和差分数组/P3397地毯/: P3397地毯-二维差分.cpp  P3397地毯.cpp
luogu/题单/能力全面提升综合题单/Part 2 基础算法/Part 2.8 前缀和差分数组/P4552数列增减/: P4552数列增减.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.1 深度优先搜索/P1019单词接龙/: P1019单词接龙.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.1 深度优先搜索/P1219八皇后/: P1219八皇后-回溯TLE.cpp  P1219八皇后.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.1 深度优先搜索/P1378 油滴扩展/: P1378 油滴扩展.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.1 深度优先搜索/P5194ScalesS/: P5194ScalesS.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.1 深度优先搜索/P5440【XR-2】奇迹/: P5440 【XR-2】奇迹.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.2 广度优先搜索/P1126 机器人搬重物/: P1126 机器人搬重物-MBFS.cpp
luogu/题单/能力全面提升综合题单/Part3 搜索/Part 3.2 广度优先搜索/P1162 填涂颜色/: P1162 填涂颜色-bfs.cpp  P1162 填涂颜色-dfs连通分量.cpp  P1162 填涂颜色-并查集.cpp
基础算法/: 二分查找.cpp  二叉树-前序中序后续遍历.cpp  回溯算法-排列组合子集问题.cpp
排序算法/: 冒泡排序.cpp  基数排序.cpp  基数排序LSD.cpp  基数排序LSDV2-支持0和负数.cpp  堆排序.cpp  归并排序.cpp  快速排序-2.cpp  快速排序-3.cpp  快速排序-3.md  快速排序-4.cpp  快速排序-4.md  快速排序-三路快排.cpp  快速排序-三路快排.md  快速排序-两路快排-标准写法.cpp  快速排序-两路快排-标准写法.md  快速排序.cpp  桶排序.cpp  计数排序.cpp
(+2 files in other folders)
